Huge refactor, the relationships are now managed through the TType class. A plugin has the possibility to make its relation public. Using this information the configuration can now display traceability according to this information modifications : CORE + UI

--- a/plugins/org.eclipse.reqcycle.emf.traceability.sysml/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.emf.traceability.sysml/plugin.xml
@@ -24,5 +24,12 @@
             subTypeOf="org.eclipse.reqcycle.emf.type">
       </type>
    </extension>
+   <extension
+         point="org.eclipse.reqcycle.traceability.types.ttypes">
+      <ttype
+            provider="org.eclipse.reqcycle.emf.traceability.sysml.types.traceability.SysMLTTypeProvider"
+            theClass="org.eclipse.reqcycle.emf.traceability.sysml.SysMLTType">
+      </ttype>
+   </extension>
 
 </plugin>
