--- a/plugins/org.eclipse.reqcycle.traceability.types.ui/plugin.properties
+++ b/plugins/org.eclipse.reqcycle.traceability.types.ui/plugin.properties
@@ -41,3 +41,17 @@ _UI_Entry_type = Entry
 _UI_CustomType_entries_feature = Entries
 _UI_Entry_name_feature = Name
 _UI_Entry_value_feature = Value
+_UI_Relation_agregatedTypes_feature = Agregated Types
+_UI_Relation_icon_feature = Icon
+_UI_Attribute_type = Attribute
+_UI_RegisteredAttribute_type = Registered Attribute
+_UI_StdAttribute_type = Attribute
+_UI_Relation_attributes_feature = Attributes
+_UI_RegisteredAttribute_id_feature = Id
+_UI_StdAttribute_name_feature = Name
+_UI_StdAttribute_possibleValues_feature = Possible Values
+_UI_StdAttribute_type_feature = Type
+_UI_AttributeType_String_literal = String
+_UI_AttributeType_Boolean_literal = Boolean
+_UI_AttributeType_Int_literal = Int
+_UI_RegisteredAttribute_attribute_feature = Attribute
