Cache the data of the type checker. Each time a type is computed, the data is saved in a cache in case of a new build the cache for the building resource is reinitialized. Performance are now acceptable for type management

--- a/plugins/org.eclipse.reqcycle.types/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.types/plugin.xml
@@ -9,6 +9,10 @@
             interface="org.eclipse.reqcycle.types.ITypesManager"
             priority="1">
       </binding>
+      <binding
+            impl="org.eclipse.reqcycle.types.impl.CachedTypeChecker"
+            interface="org.eclipse.reqcycle.types.ICachedTypedChecker">
+      </binding>
    </extension>
    <extension
          point="org.eclipse.reqcycle.types.types">
