some improvements add elements in UI to create new instance and change the name of the view prepare code for attributes traceability traceability modified when configuration is selected fix bug with default configuration retrieving

--- a/plugins/org.eclipse.reqcycle.traceability.builder/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.traceability.builder/plugin.xml
@@ -2,6 +2,7 @@
 <?eclipse version="3.4"?>
 <plugin>
    <extension-point id="traceabilityAnalyser" name="Traceability Analyser" schema="schema/traceabilityAnalyser.exsd"/>
+   <extension-point id="newUpwardDecoration" name="New Upward Decoration" schema="schema/newUpwardDecoration.exsd"/>
    <extension
          point="org.eclipse.ziggurat.inject.binding">
       <binding
