--- a/plugins/org.eclipse.reqcycle.dnd/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.dnd/plugin.xml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
+   <extension
+         point="org.eclipse.ui.dropActions">
+      <action
+            class="org.eclipse.reqcycle.dnd.DropRequirementDelegate"
+            id="org.eclipse.reqcycle.dnd.DropRequirementDelegate">
+      </action>
+   </extension>
 
 </plugin>
