--- a/plugins/org.eclipse.reqcycle.repository.data.ui/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.repository.data.ui/plugin.xml
@@ -5,9 +5,15 @@
        point="org.eclipse.ui.preferencePages">
     <page
           category="org.eclipse.reqycle.core.ui.pref.reqcycle"
-          class="org.eclipse.reqcycle.repository.data.ui.preference.TypePreferencePage"
-          id="org.eclipse.reqcycle.repository.data.ui.page"
+          class="org.eclipse.reqcycle.repository.data.ui.preference.TypesPreferencePage"
+          id="org.eclipse.reqcycle.repository.data.ui.typesPreferencePage"
           name="Requirement Types">
+    </page>
+    <page
+          category="org.eclipse.reqycle.core.ui.pref.reqcycle"
+          class="org.eclipse.reqcycle.repository.data.ui.preference.ScopesPreferencePage"
+          id="org.eclipse.reqcycle.repository.data.ui.scopesPreferencePage"
+          name="Scopes">
     </page>
  </extension>
 </plugin>
