--- a/plugins/org.eclipse.reqcycle.uri/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.uri/plugin.xml
@@ -26,5 +26,14 @@
             priority="100">
       </binding>
    </extension>
+   <extension
+         point="org.eclipse.reqcycle.uri.reachableHandler">
+      <objectHandler
+            handler="org.eclipse.reqcycle.uri.impl.handlers.StandardTypeHandler">
+      </objectHandler>
+      <reachableHandler
+            handler="org.eclipse.reqcycle.uri.ReachableHandler2">
+      </reachableHandler>
+   </extension>
 
 </plugin>
