attribute storage initialisation OK need to provide features to read/edit them from UI

--- a/plugins/org.eclipse.reqcycle.uri/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.uri/plugin.xml
@@ -32,7 +32,7 @@
             handler="org.eclipse.reqcycle.uri.impl.handlers.StandardTypeHandler">
       </objectHandler>
       <reachableHandler
-            handler="org.eclipse.reqcycle.uri.ReachableHandler2">
+            handler="org.eclipse.reqcycle.uri.impl.handlers.StandardTypeHandler">
       </reachableHandler>
    </extension>
 
