Add label and description to analysers add preference page t oenable / disable analysers and have description add a ITraceabilityAnalyserDisabler.java to allows developer to disable or enable some, the default implementation is in builder.ui plugins

--- a/plugins/org.eclipse.reqcycle.emf.traceability.sysml/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.emf.traceability.sysml/plugin.xml
@@ -4,6 +4,8 @@
    <extension
          point="org.eclipse.reqcycle.traceability.builder.traceabilityAnalyser">
       <Analyser
+            description="analyse UML and SysML files to detect : satisfy, trace, copy, derive, verify, and allocate"
+            label="UML and SysML Analyser"
             visitor="org.eclipse.reqcycle.emf.traceability.sysml.handler.SysMLTraceabilityVisitor">
       </Analyser>
    </extension>
