--- a/plugins/org.eclipse.reqcycle.traceability.builder.ui/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.traceability.builder.ui/plugin.xml
@@ -21,8 +21,21 @@
             category="org.eclipse.reqcycle.traceability.types.ui.traceabilityPage"
             class="org.eclipse.reqcycle.traceability.builder.ui.preferences.TraceabilityBuildersPreferencePage"
             id="org.eclipse.reqcycle.traceability.types.ui.tracabuilders"
-            name="Traceability Analysis">
+            name="Analysed projects">
       </page>
+      <page
+            category="org.eclipse.reqcycle.traceability.types.ui.traceabilityPage"
+            class="org.eclipse.reqcycle.traceability.builder.ui.preferences.AnalysersPreferencePage"
+            id="org.eclipse.reqcycle.traceability.types.ui.tracabuilders"
+            name="Analysers">
+      </page>
+   </extension>
+   <extension
+         point="org.eclipse.ziggurat.inject.binding">
+      <binding
+            impl="org.eclipse.reqcycle.traceability.builder.ui.preferences.PreferenceBasedTraceabilityDisabler"
+            interface="org.eclipse.reqcycle.traceability.builder.ITraceabilityAnalyserDisabler">
+      </binding>
    </extension>
 	
 </plugin>
