--- a/plugins/org.eclipse.reqcycle.emf.traceability.topcasedreq/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.emf.traceability.topcasedreq/plugin.xml
@@ -4,6 +4,8 @@
    <extension
          point="org.eclipse.reqcycle.traceability.builder.traceabilityAnalyser">
       <Analyser
+            description="analyse TOPCASED requirement traceability"
+            label="TOPCASED Req Analyser"
             visitor="org.eclipse.reqcycle.emf.traceability.topcasedreq.builder.TopcasedReqTraceabilityAnalyser">
       </Analyser>
    </extension>
@@ -16,6 +18,12 @@
             label="Topcased REQ element"
             subTypeOf="org.eclipse.reqcycle.emf.type">
       </type>
+   </extension>
+   <extension
+         point="org.eclipse.reqcycle.traceability.types.ttypes">
+      <ttype
+            provider="org.eclipse.reqcycle.emf.traceability.topcasedreq.types.TReqTypeProvider">
+      </ttype>
    </extension>
 
 </plugin>
