Implement conditional style application for link depending on their attributes the configuration is done using preferences page the predicate editor is used to define conditions to access it use ReqCycle menu

--- a/plugins/org.eclipse.reqcycle.core.ui/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.core.ui/plugin.xml
@@ -23,7 +23,8 @@
 	<menuContribution
             locationURI="toolbar:org.eclipse.ui.main.toolbar?after=additions">
         <toolbar
-               id="org.eclipse.reqcycle.core.ui.toolbar">
+              id="org.eclipse.reqcycle.core.ui.toolbar"
+              label="ReqCycle">
 		</toolbar>
 	</menuContribution>
     </extension>
