--- a/plugins/org.eclipse.reqcycle.traceability.types.ui/plugin.properties
+++ b/plugins/org.eclipse.reqcycle.traceability.types.ui/plugin.properties
@@ -55,3 +55,20 @@ _UI_AttributeType_String_literal = String
 _UI_AttributeType_Boolean_literal = Boolean
 _UI_AttributeType_Int_literal = Int
 _UI_RegisteredAttribute_attribute_feature = Attribute
+_UI_RelationsPredicatesMapping_type = Relations Predicates Mapping
+_UI_TypeConfigContainer_mappings_feature = Mappings
+_UI_RelationsPredicatesMapping_predicate_feature = Predicate
+_UI_RelationsPredicatesMapping_relation_feature = Relation
+_UI_RelationsPredicatesMapping_selectionPredicate_feature = Selection Predicate
+_UI_RelationsPredicatesMapping_conditionPredicate_feature = Condition Predicate
+_UI_RelationsPredicatesMapping_color_feature = Color
+_UI_RelationsPredicatesMapping_style_feature = Style
+_UI_DecorationPredicate_type = Decoration Predicate
+_UI_SelectionPredicate_type = Selection Predicate
+_UI_IPredicateLink_type = IPredicate Link
+_UI_RelationsPredicatesMapping_decoration_feature = Decoration
+_UI_RelationsPredicatesMapping_selection_feature = Selection
+_UI_DecorationPredicate_color_feature = Color
+_UI_DecorationPredicate_style_feature = Style
+_UI_IPredicateLink_predicate_feature = Predicate
+_UI_RelationsPredicatesMapping_decorations_feature = Decorations
