--- a/plugins/org.eclipse.reqcycle.traceability.types.ui/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.traceability.types.ui/plugin.xml
@@ -37,6 +37,59 @@
             id="org.eclipse.reqcycle.traceability.types.ui.traceabilityPage"
             name="Traceability">
       </page>
+      <page
+            category="org.eclipse.reqcycle.traceability.types.ui.tracatype"
+            class="org.eclipse.reqcycle.traceability.types.configuration.preferences.TTypeDecorationPreferencePage"
+            id="org.eclipse.reqcycle.traceability.types.ui.tracatype.decoration"
+            name="Label decoration">
+      </page>
+   </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            allPopups="false"
+            locationURI="menu:org.eclipse.reqcycle.core.ui.menu?after=additions">
+         <command
+               commandId="org.eclipse.reqcycle.traceability.types.ui.predicateEditor"
+               label="Predicate Editor for Traceability Relation"
+               style="push">
+         </command>
+      </menuContribution>
+   </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <command
+            id="org.eclipse.reqcycle.traceability.types.ui.predicateEditor"
+            name="Predicate Editor for Traceability Relation">
+      </command>
+   </extension>
+   <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            class="org.eclipse.reqcycle.traceability.types.configuration.predicates.PredicateEditorForTraceabilityHandler"
+            commandId="org.eclipse.reqcycle.traceability.types.ui.predicateEditor">
+      </handler>
+   </extension>
+   <extension
+         point="org.eclipse.emf.ecore.dynamic_package">
+      <resource
+            location="reqcyclet:/dynamicPackage"
+            uri="http://www.reqcycle.org/relations/attributes">
+      </resource>
+   </extension>
+   <extension
+         point="org.eclipse.emf.ecore.protocol_parser">
+      <parser
+            class="org.eclipse.reqcycle.traceability.types.configuration.predicates.ReqCycleTraceabilitySchemeFactory"
+            protocolName="reqcyclet">
+      </parser>
+   </extension>
+   <extension
+         point="org.eclipse.ziggurat.inject.binding">
+      <binding
+            impl="org.eclipse.reqcycle.traceability.types.ui.impl.StylePredicateProvider"
+            interface="org.eclipse.reqcycle.traceability.types.ui.IStylePredicateProvider">
+      </binding>
    </extension>
 
 </plugin>
