Add New and Edit Predicate menus. Remove ReqCycle ui dependency from predicates ui Rename some variables (DataTypePackage -> DataModel

--- a/plugins/org.eclipse.reqcycle.core.ui/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.core.ui/plugin.xml
@@ -35,5 +35,12 @@
             name="ReqCycle">
       </perspective>
    </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <category
+            id="org.eclipse.reqcycle.core.ui.category"
+            name="ReqCycle Category">
+      </category>
+   </extension>
     
 </plugin>
