--- a/plugins/org.eclipse.reqcycle.predicates.ui/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.predicates.ui/plugin.xml
@@ -20,9 +20,9 @@
                org.eclipse.emf.edit.provider.IItemColorProvider"/>
    </extension>
 
-   <extension point="org.eclipse.ui.newWizards">
+  <!-- <extension point="org.eclipse.ui.newWizards">-->
       <!-- @generated predicates -->
-      <category
+      <!--<category
             id="org.eclipse.emf.ecore.Wizard.category.ID"
             name="%_UI_Wizard_category"/>
       <wizard
@@ -34,7 +34,7 @@
          <description>%_UI_PredicatesModelWizard_description</description>
          <selection class="org.eclipse.core.resources.IResource"/>
       </wizard>
-   </extension>
+   </extension>-->
 
    <extension point="org.eclipse.ui.editors">
       <!-- @generated predicates -->
@@ -76,13 +76,6 @@
                label="Predicates">
          </menu>
       </menuContribution>
-   </extension>
-   <extension
-         point="org.eclipse.ui.views">
-      <category
-            id="org.eclipse.reqcycle.predicates.ui.views.ReqCycleCategory"
-            name="ReqCycle">
-      </category>
    </extension>
 
 </plugin>
