--- a/plugins/org.eclipse.reqcycle.predicates.ui/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.predicates.ui/plugin.xml
@@ -71,11 +71,51 @@
          point="org.eclipse.ui.menus">
       <menuContribution
             allPopups="false"
-            locationURI="menu:org.eclipse.ui.main.menu?after=additions">
-         <menu
-               label="Predicates">
-         </menu>
+            locationURI="menu:org.eclipse.reqcycle.core.ui.menu">
+         <separator
+               name="org.eclipse.reqcycle.predicates.ui.menu.start"
+               visible="true">
+         </separator>
       </menuContribution>
    </extension>
-
+   <extension
+        point="org.eclipse.ui.commands">
+     <command
+           categoryId="org.eclipse.reqcycle.core.ui.category"
+           id="org.eclipse.reqcycle.repository.ui.commands.newPredicateCommand"
+           name="New Predicate">
+     </command>
+     <command
+           categoryId="org.eclipse.reqcycle.core.ui.category"
+           id="org.eclipse.reqcycle.repository.ui.commands.editPredicateCommand"
+           name="Edit Predicate">
+     </command>
+  </extension>
+  <extension
+        point="org.eclipse.ui.handlers">
+     <handler
+           class="org.eclipse.reqcycle.predicates.ui.handlers.NewPredicateHandler"
+           commandId="org.eclipse.reqcycle.repository.ui.commands.newPredicateCommand">
+     </handler>
+     <handler
+           class="org.eclipse.reqcycle.predicates.ui.handlers.EditPredicateHandler"
+           commandId="org.eclipse.reqcycle.repository.ui.commands.editPredicateCommand">
+     </handler>
+  </extension>
+  <extension
+        point="org.eclipse.ui.menus">
+     <menuContribution
+           locationURI="menu:org.eclipse.reqcycle.core.ui.menu?after=org.eclipse.reqcycle.predicates.ui.menu.start">
+        <command
+              commandId="org.eclipse.reqcycle.repository.ui.commands.newPredicateCommand"
+              id="org.eclipse.reqcycle.repository.ui.menus.newPredicateCommand"
+              mnemonic="S">
+        </command>
+        <command
+              commandId="org.eclipse.reqcycle.repository.ui.commands.editPredicateCommand"
+              id="org.eclipse.reqcycle.repository.ui.menus.editPredicateCommand"
+              mnemonic="S">
+        </command>
+     </menuContribution>
+  </extension>
 </plugin>
