save new predicates with Ctrl + S in Predicates Editor Initialize ReqCycle Data Managers on startup

--- a/plugins/org.eclipse.reqcycle.repository.data/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.repository.data/plugin.xml
@@ -102,5 +102,11 @@
             priority="10">
       </reachableHandler>
    </extension>
+   <extension
+         point="org.eclipse.ui.startup">
+      <startup
+            class="org.eclipse.reqcycle.repository.data.impl.internal.InitManagers">
+      </startup>
+   </extension>
 
 </plugin>
