--- a/plugins/org.eclipse.reqcycle.predicates.ui/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.predicates.ui/plugin.xml
@@ -82,24 +82,15 @@
         point="org.eclipse.ui.commands">
      <command
            categoryId="org.eclipse.reqcycle.core.ui.category"
-           id="org.eclipse.reqcycle.repository.ui.commands.newPredicateCommand"
-           name="New Predicate">
-     </command>
-     <command
-           categoryId="org.eclipse.reqcycle.core.ui.category"
-           id="org.eclipse.reqcycle.repository.ui.commands.editPredicateCommand"
-           name="Edit Predicate">
+           id="org.eclipse.reqcycle.repository.ui.commands.OpenPredicatesEditorCommand"
+           name="Open Predicates Editor">
      </command>
   </extension>
   <extension
         point="org.eclipse.ui.handlers">
      <handler
-           class="org.eclipse.reqcycle.predicates.ui.handlers.NewPredicateHandler"
-           commandId="org.eclipse.reqcycle.repository.ui.commands.newPredicateCommand">
-     </handler>
-     <handler
-           class="org.eclipse.reqcycle.predicates.ui.handlers.EditPredicateHandler"
-           commandId="org.eclipse.reqcycle.repository.ui.commands.editPredicateCommand">
+           class="org.eclipse.reqcycle.predicates.ui.handlers.OpenPredicatesEditorHandler"
+           commandId="org.eclipse.reqcycle.repository.ui.commands.OpenPredicatesEditorCommand">
      </handler>
   </extension>
   <extension
@@ -107,13 +98,8 @@
      <menuContribution
            locationURI="menu:org.eclipse.reqcycle.core.ui.menu?after=org.eclipse.reqcycle.predicates.ui.menu.start">
         <command
-              commandId="org.eclipse.reqcycle.repository.ui.commands.newPredicateCommand"
-              id="org.eclipse.reqcycle.repository.ui.menus.newPredicateCommand"
-              mnemonic="S">
-        </command>
-        <command
-              commandId="org.eclipse.reqcycle.repository.ui.commands.editPredicateCommand"
-              id="org.eclipse.reqcycle.repository.ui.menus.editPredicateCommand"
+              commandId="org.eclipse.reqcycle.repository.ui.commands.OpenPredicatesEditorCommand"
+              id="org.eclipse.reqcycle.repository.ui.menus.openPredicatesEditorCommand"
               mnemonic="S">
         </command>
      </menuContribution>
