--- a/plugins/org.eclipse.reqcycle.repository.connector.rmf/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.repository.connector.rmf/plugin.xml
@@ -5,9 +5,9 @@
          point="org.eclipse.reqcycle.repository.connector.connectorCore">
       <connectorCore
             class="org.eclipse.reqcycle.repository.connector.rmf.RMFConnector"
-            icon="icons/RMF.png"
+            icon="icons/ReqIF.png"
             id="org.eclipse.reqcycle.repository.connector.rmf.connectorCore"
-            name="RMF">
+            name="ReqIF">
       </connectorCore>
    </extension>
 </plugin>
