Add data model combo to Scope view

--- a/plugins/org.eclipse.reqcycle.repository.ui/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.repository.ui/plugin.xml
@@ -25,6 +25,7 @@
             restorable="true">
       </view>
       <view
+            allowMultiple="true"
             category="org.eclipse.reqcycle"
             class="org.eclipse.reqcycle.repository.ui.views.ScopeView"
             icon="icons/open.png"
