alphabetical ordering for elements in tree fix problem with path equals to null

--- a/plugins/org.eclipse.reqcycle.traceability.builder.ui/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.traceability.builder.ui/plugin.xml
@@ -21,7 +21,7 @@
             category="org.eclipse.reqcycle.traceability.types.ui.traceabilityPage"
             class="org.eclipse.reqcycle.traceability.builder.ui.preferences.TraceabilityBuildersPreferencePage"
             id="org.eclipse.reqcycle.traceability.types.ui.tracabuilders"
-            name="Analysed projects">
+            name="Projects to analyse">
       </page>
       <page
             category="org.eclipse.reqcycle.traceability.types.ui.traceabilityPage"
