--- a/plugins/org.eclipse.reqcycle.sesame/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.sesame/plugin.xml
@@ -33,8 +33,8 @@
    <extension
          point="org.eclipse.reqcycle.traceability.builder.traceabilityAnalyser">
       <Analyser
-            description="analyse the traceability links created by the user"
-            label="Explicit Traceability Analyser"
+            description="analyse the transverse traceability links created by the user"
+            label="Transverse Traceability Analyser (ReqCycle)"
             visitor="org.eclipse.reqcycle.sesame.traceability.TraceabilityVisitor">
       </Analyser>
    </extension>
