--- a/plugins/org.eclipse.reqcycle.repository.connector.local/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.repository.connector.local/plugin.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
-   <extension
+   	<extension
          point="org.eclipse.reqcycle.repository.connector.connectorCore">
       <connectorCore
             class="org.eclipse.reqcycle.repository.connector.local.LocalConnector"
             id="org.eclipse.reqcycle.repository.connector.local.connectorCore"
             name="Local">
       </connectorCore>
-   </extension>
-
+   	</extension>
+	<extension
+         point="org.eclipse.ui.menus">
+		<menuContribution
+	            locationURI="popup:org.eclipse.ui.popup.any">
+	         <menu
+	         		id="org.eclipse.reqcycle.repository.connector.local.create.menu"
+	               label="New Child">
+	               <dynamic
+	               		class="org.eclipse.reqcycle.repository.connector.local.ReqCycleContributionItem"
+	                     id="org.eclipse.reqcycle.repository.connector.local.create.menu.widget">
+	               </dynamic>
+	         </menu>
+	      </menuContribution>
+	</extension>
 </plugin>
