- Refactor managers - Add Requirement Editor Add Dynamic Menu for Requirement creation - Rename scope view ti Requirement Scope View

--- a/plugins/org.eclipse.reqcycle.repository.data/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.repository.data/plugin.xml
@@ -64,8 +64,8 @@
    <extension
          point="org.eclipse.ziggurat.inject.binding">
       <binding
-            impl="org.eclipse.reqcycle.repository.data.impl.RequirementSourceManagerImpl"
-            interface="org.eclipse.reqcycle.repository.data.IRequirementSourceManager">
+            impl="org.eclipse.reqcycle.repository.data.impl.DataManagerImpl"
+            interface="org.eclipse.reqcycle.repository.data.IDataManager">
       </binding>
       <binding
             impl="org.eclipse.reqcycle.repository.data.impl.RequirementCreatorImpl"
