--- a/plugins/org.eclipse.reqcycle.repository.connector.local/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.repository.connector.local/plugin.xml
@@ -23,4 +23,78 @@
 	         </menu>
 	      </menuContribution>
 	</extension>-->
+   <extension point="org.eclipse.ui.newWizards">
+      <!-- @generated not DataModel -->
+<!--      <category
+            id="org.eclipse.emf.ecore.Wizard.category.ID"
+            name="%_UI_Wizard_category"/>
+      <wizard
+            id="DataModel.presentation.DataModelModelWizardID"
+            name="%_UI_DataModelModelWizard_label"
+            class="DataModel.presentation.DataModelModelWizard"
+            category="org.eclipse.emf.ecore.Wizard.category.ID"
+            icon="icons/full/obj16/DataModelModelFile.gif">
+         <description>%_UI_DataModelModelWizard_description</description>
+         <selection class="org.eclipse.core.resources.IResource"/>
+      </wizard> -->
+   </extension> 
+
+   <extension point="org.eclipse.ui.editors">
+      <!-- @generated not DataModel -->
+      <editor
+            id="DataModel.presentation.DataModelEditorID"
+            name="%_UI_DataModelEditor_label"
+            icon="icons/full/obj16/DataModelModelFile.gif"
+            class="org.eclipse.reqcycle.repository.connector.local.editor.CustomDataModelEditor"
+            contributorClass="org.eclipse.reqcycle.repository.connector.local.editor.CustomDataModelActionBarContributor">
+      </editor>
+   </extension>
+   
+   
+      <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            locationURI="popup:org.eclipse.ui.popup.any?after=additions">
+         <command
+               commandId="org.eclipse.reqcycle.repository.connector.local.editRequirements.command"
+               id="org.eclipse.reqcycle.repository.connector.local.editRequirements"
+               label="Edit Requirements"
+               style="push">
+               <visibleWhen>
+                  <with  variable="selection">
+                     <test
+                           property="org.eclipse.reqcycle.repository.connector.local.editRequirement.tester.isLocal">
+                     </test>
+                            
+                  </with>
+               </visibleWhen>
+         </command>
+      </menuContribution>
+   </extension>
+   <extension
+         point="org.eclipse.ui.commands">
+      <command
+            id="org.eclipse.reqcycle.repository.connector.local.editRequirements.command"
+            name="Edit Requirements Command">
+      </command>
+   </extension>
+   <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            class="org.eclipse.reqcycle.repository.connector.local.EditRequirementsHandler"
+            commandId="org.eclipse.reqcycle.repository.connector.local.editRequirements.command">
+      </handler>
+   </extension>
+   <extension
+         point="org.eclipse.core.expressions.propertyTesters">
+      <propertyTester
+            class="org.eclipse.reqcycle.repository.connector.local.EditRequirementsPropertyTester"
+            id="org.eclipse.reqcycle.repository.connector.local.editRequirements.PropertyTester"
+            namespace="org.eclipse.reqcycle.repository.connector.local.editRequirement.tester"
+            properties="isLocal"
+            type="org.eclipse.jface.viewers.IStructuredSelection">
+      </propertyTester>
+   </extension>
+   
+   
 </plugin>
