--- a/plugins/org.eclipse.reqcycle.repository.ui/plugin.xml
+++ b/plugins/org.eclipse.reqcycle.repository.ui/plugin.xml
@@ -42,4 +42,11 @@
            name="Create New Requirement Source">
      </wizard>
   </extension>
+  <extension
+        point="org.eclipse.ui.navigator.viewer">
+     <dragAssistant
+           class="org.eclipse.reqcycle.repository.ui.CommonDragAdapterAssistant1"
+           viewerId="org.eclipse.reqcycle.repository.ui.dragAssistant1">
+     </dragAssistant>
+  </extension>
 </plugin>
